--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+.fa-star {
+  color: white;
+  filter: drop-shadow(0 0 0.05rem black);
+}
 .checked {
   color: yellow;
 }
